src/fluxcd/infra/flux-webhook-receiver/services.yml
apiVersion: v1
kind: Service
metadata:
  name: fluxcd-webhook-receiver
  namespace: flux-system
spec:
  type: LoadBalancer
  selector:
    app: notification-controller
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9292
