src/fluxcd/infra/flux-webhook-receiver/ingressRoutes.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-webhook-receiver
  namespace: flux-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fluxhook.${domain}`)
      kind: Rule
      services:
        - name: flux-webhook-receiver
          kind: Service
          port: http
  tls: {}
